deploy/relay/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeokcham-relay-headless
  labels:
    app.kubernetes.io/component: relay
    app.kubernetes.io/name: yeokcham
spec:
  clusterIP: None
  ports:
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: grpc
  selector:
    app.kubernetes.io/component: relay
    app.kubernetes.io/name: yeokcham
---
apiVersion: v1
kind: Service
metadata:
  name: yeokcham-relay
  labels:
    app.kubernetes.io/component: relay
    app.kubernetes.io/name: yeokcham
spec:
  ports:
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: grpc
  selector:
    app.kubernetes.io/component: relay
    app.kubernetes.io/name: yeokcham
